--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-socket.io": "^9.2.0",
     "@nestjs/typeorm": "^9.0.1",
+    "@nestjs/websockets": "^9.2.0",
     "bcrypt": "^5.1.0",
     "mysql2": "^2.3.3",
     "node-rsa-ts": "0.0.1",
